<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright (C) 2018 Google Inc.
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.hellotoast.MainActivity">

    <Button
        android:id="@+id/button_toast"
        android:layout_width="118dp"
        android:layout_height="64dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="20dp"
        android:background="@color/colorPrimary"
        android:onClick="showToast"
        app:layout_constraintLeft_toLeftOf="parent"
        android:text="@string/button_label_toast"
        android:textColor="@android:color/white"
        android:layout_marginStart="16dp" />

    <TextView
        android:id="@+id/show_count"
        android:layout_width="233dp"
        android:layout_height="281dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentRight="true"
        android:layout_marginStart="154dp"
        android:layout_marginLeft="154dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="24dp"
        android:layout_marginRight="24dp"
        android:layout_marginBottom="8dp"
        android:background="#FFFF00"
        android:gravity="center_vertical"
        android:text="@string/count_initial_value"
        android:textAlignment="center"
        android:textColor="@color/colorPrimary"
        android:textSize="160sp"
        android:textStyle="bold" />

    <Button
        android:id="@+id/button_zero"
        android:layout_width="118dp"
        android:layout_height="64dp"
        android:layout_below="@+id/button_toast"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="17dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="40dp"
        android:background="@color/colorGray"
        android:onClick="Zero"
        android:text="@string/button_label_zero"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/button_count"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_toast" />

    <Button
        android:id="@+id/button_count"
        android:layout_width="118dp"
        android:layout_height="64dp"
        android:layout_below="@+id/button_zero"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="18dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="40dp"
        android:background="@color/colorPrimary"
        android:onClick="countUp"
        android:text="@string/button_label_count"
        android:textColor="@android:color/white"
        app:layout_constraintLeft_toLeftOf="parent" />
</RelativeLayout>
